noise and maven
+ noise factor at weight update
+ maven project struture
+ loss attribute in Network